# foxglove-ros-client-py

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: live_bridge_check.py
src/foxglove_ros_client/: __init__.py  __main__.py  __version__.py  _cdr.py  _protocol.py  core.py  event_emitter.py  ros.py  tf.py
src/foxglove_ros_client/comm/: __init__.py  comm.py  comm_autobahn.py  comm_cli.py
src/foxglove_ros_client/ros1/: __init__.py  actionlib.py
src/foxglove_ros_client/ros2/: __init__.py
tests/: test_cdr.py  test_compatibility_entrypoints.py  test_core.py  test_protocol_integration.py  test_ros_runtime.py  test_tf.py
