[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "foxglove-ros-client-py"
version = "0.1.0"
description = "Python client for foxglove_bridge with a roslibpy-compatible API"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Noah Wardlow" }]
keywords = ["ros", "ros2", "foxglove", "websocket"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "numpy>=1.24",
  "rosbags>=0.11.0",
  "websocket-client>=1.8.0",
]

[project.optional-dependencies]
test = ["pytest>=8", "build>=1.2", "websockets>=15"]

[project.urls]
Homepage = "https://github.com/noah-wardlow/foxglove-ros-client-py"
Repository = "https://github.com/noah-wardlow/foxglove-ros-client-py"

[project.scripts]
foxglove-ros-client-py = "foxglove_ros_client.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/foxglove_ros_client"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
